Update back link on item menu. Fix cart scroll issue on smaller screens.

--- a/src/sass/components/_layout.scss
+++ b/src/sass/components/_layout.scss
@@ -130,6 +130,7 @@ a {
 
   .app--cart-expanded & {
     height: 80%;
+    overflow: scroll;
   }
 }
 
